feat: SJRA-1873 Added update case status endpoint
