# cli/python/radiant_python/models/case_status_response.py
@@ -17,19 +17,18 @@ import pprint
 import re  # noqa: F401
 import json
 
-from pydantic import BaseModel, ConfigDict, StrictBool
+from pydantic import BaseModel, ConfigDict, StrictInt, StrictStr
 from typing import Any, ClassVar, Dict, List, Optional
-from radiant_python.models.sqon import Sqon
 from typing import Optional, Set
 from typing_extensions import Self
 
-class CountBodyWithSqon(BaseModel):
+class CaseStatusResponse(BaseModel):
     """
-    CountBodyWithSqon
+    A case's status after a successful change.
     """ # noqa: E501
-    sqon: Optional[Sqon] = None
-    with_note: Optional[StrictBool] = None
-    __properties: ClassVar[List[str]] = ["sqon", "with_note"]
+    case_id: Optional[StrictInt] = None
+    status_code: Optional[StrictStr] = None
+    __properties: ClassVar[List[str]] = ["case_id", "status_code"]
 
     model_config = ConfigDict(
         populate_by_name=True,
@@ -49,7 +48,7 @@ class CountBodyWithSqon(BaseModel):
 
     @classmethod
     def from_json(cls, json_str: str) -> Optional[Self]:
-        """Create an instance of CountBodyWithSqon from a JSON string"""
+        """Create an instance of CaseStatusResponse from a JSON string"""
         return cls.from_dict(json.loads(json_str))
 
     def to_dict(self) -> Dict[str, Any]:
@@ -70,14 +69,11 @@ class CountBodyWithSqon(BaseModel):
             exclude=excluded_fields,
             exclude_none=True,
         )
-        # override the default output from pydantic by calling `to_dict()` of sqon
-        if self.sqon:
-            _dict['sqon'] = self.sqon.to_dict()
         return _dict
 
     @classmethod
     def from_dict(cls, obj: Optional[Dict[str, Any]]) -> Optional[Self]:
-        """Create an instance of CountBodyWithSqon from a dict"""
+        """Create an instance of CaseStatusResponse from a dict"""
         if obj is None:
             return None
 
@@ -85,8 +81,8 @@ class CountBodyWithSqon(BaseModel):
             return cls.model_validate(obj)
 
         _obj = cls.model_validate({
-            "sqon": Sqon.from_dict(obj["sqon"]) if obj.get("sqon") is not None else None,
-            "with_note": obj.get("with_note")
+            "case_id": obj.get("case_id"),
+            "status_code": obj.get("status_code")
         })
         return _obj
 
